data/derived/comb/progs/unify/prog2151.ml.out
Characters 40-67:
  if i > 0 then bigAdd (mulByDigit (i-1) l);;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type unit
